# Projeto-Final

Testes de rust/teste01/: Cargo.toml
Testes de rust/teste01/src/: main.rs
ferramenta_de_teste/: Cargo.toml
ferramenta_de_teste/src/: main.rs
mmo-rust-server-master/helper/: game.js  game_client.html
mmo-rust-server-master/src/: main.rs
sevidor/: Cargo.toml  script.js  test_client.html
sevidor/src/: main.rs
